tests/ui/explicit/explicit-self-lifetime-mismatch.stderr
error[E0308]: mismatched `self` parameter type
  --> $DIR/explicit-self-lifetime-mismatch.rs:10:12
   |
LL |            Foo<'b,'a>
   |            ^^^^^^^^^^ lifetime mismatch
   |
   = note: expected struct `Foo<'a, 'b>`
              found struct `Foo<'b, 'a>`
note: the lifetime `'b` as defined here...
  --> $DIR/explicit-self-lifetime-mismatch.rs:8:9
   |
LL | impl<'a,'b> Foo<'a,'b> {
   |         ^^
note: ...does not necessarily outlive the lifetime `'a` as defined here
  --> $DIR/explicit-self-lifetime-mismatch.rs:8:6
   |
LL | impl<'a,'b> Foo<'a,'b> {
   |      ^^

error[E0308]: mismatched `self` parameter type
  --> $DIR/explicit-self-lifetime-mismatch.rs:10:12
   |
LL |            Foo<'b,'a>
   |            ^^^^^^^^^^ lifetime mismatch
   |
   = note: expected struct `Foo<'a, 'b>`
              found struct `Foo<'b, 'a>`
note: the lifetime `'a` as defined here...
  --> $DIR/explicit-self-lifetime-mismatch.rs:8:6
   |
LL | impl<'a,'b> Foo<'a,'b> {
   |      ^^
note: ...does not necessarily outlive the lifetime `'b` as defined here
  --> $DIR/explicit-self-lifetime-mismatch.rs:8:9
   |
LL | impl<'a,'b> Foo<'a,'b> {
   |         ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
